--- a/client/src/index.css
+++ b/client/src/index.css
@@ -24,9 +24,13 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
   min-width: 320px;
+  min-height: 100vh;
+
+  display: block;
+}
+
+#root {
   min-height: 100vh;
 }
 
